--- a/public/screen.css
+++ b/public/screen.css
@@ -2,8 +2,23 @@ html {
   height: 100%;
 }
 
-body {
-  margin: 0;
-  min-height: 100%;
-  font: 16px / 1 sans-serif;
+section {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin-top: 3em;
+
+  
+}
+
+button {
+  margin-left: 10em;
+
+  size: 1em;
+}
+
+section {
+  margin-left: 10em;
+  padding-bottom: 3em;
+  font-size: 2em;
 }
